[package]
name = "work_flag"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
toml = "0.5"
serde_derive = "1.0"
serde = "1.0"
reqwest = { version = "0.11.9", features = ["blocking"] }
visdom = "0.5.1"
rust-crypto = "0.2.36"